入力ファイルにある写真も割り振れるように修正